# Exp-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Exp-Engine/: CustomCommands.cpp  Exp-Engine.sln  Exp-Engine.vcxproj  Exp-Engine.vcxproj.filters  imgui.ini  main.cpp
Exp-Engine/Camera/: Camera.cpp  Camera.h
Exp-Engine/CommandBuffer/: CommandBuffer.h  CommandKeys.h  config.h
Exp-Engine/CommandBuffer/cmds/: GLCommands.cpp  GLCommands.h
Exp-Engine/Core/: CoreModule.cpp  CoreModule.h  Engine.cpp  Engine.h  EngineModule.cpp  EngineModule.h  WindowParameters.h
Exp-Engine/Ftl/: atomic_counter.cpp  task_scheduler.cpp
Exp-Engine/Glad/: glad.c
Exp-Engine/Glm/gtx/: compatibility.hpp
Exp-Engine/Hash/: Hash.h
Exp-Engine/Helpers/: Singleton.h
Exp-Engine/Imgui/: imgui_impl_opengl3.h
Exp-Engine/Input/: InputModule.cpp  InputModule.h
Exp-Engine/Lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h
Exp-Engine/MaterialLibrary/: MaterialLibraryModule.cpp  MaterialLibraryModule.h
Exp-Engine/Mesh/: Cube.cpp  Cube.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Quad.cpp  Quad.h  Sphere.cpp  Sphere.h
Exp-Engine/Module/: ModuleInterface.cpp  ModuleInterface.h  ModuleManager.cpp  ModuleManager.h
Exp-Engine/Profiling/: RemoteryModule.cpp  RemoteryModule.h
Exp-Engine/Remotery/: Remotery.c
Exp-Engine/Rendering/: Buffers.h  CommandBuffer.cpp  CommandBuffer.h  CustomCommands.cpp  CustomCommands.h  GLCache.cpp  GLCache.h  Material.cpp  Material.h  PostProcessor.cpp  PostProcessor.h  RenderCommand.h  RenderTarget.cpp  RenderTarget.h  RenderThread.cpp  RenderThread.h  RenderingModule.cpp  RenderingModule.h  Shader.cpp  Shader.h  ShadingTypes.h  Texture.cpp  Texture.h  TextureCube.cpp  TextureCube.h
Exp-Engine/Rendering/Helper/: shaderassist.h
Exp-Engine/Resources/: ModelLoader.cpp  ModelLoader.h  Resources.cpp  Resources.h  ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
Exp-Engine/Scene/: Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  Skybox.cpp  Skybox.h
Exp-Engine/Threading/: Semaphore.cpp
include/glad/: glad.h
lib/Debug/: assimp.lib  boost_context.lib  ftl.lib  glfw3.lib
lib/Release/: assimp.lib  boost_context.lib  ftl.lib  glfw3.lib  spdlog.lib
resources/shaders/: ambient.frag  debug_light.frag  debug_light.vert  default_blit.frag  depth.vert  directional.frag  forward_shading.frag  g_buffer.frag  g_buffer.vert  point.frag  point.vert  post_processing.frag  screen_ambient.vert  screen_quad.vert  skybox.frag  skybox.vert  stencil_light.frag  stencil_light.vert  unlit.frag  unlit.vert
resources/shaders/common/: brdf.glsl  uniforms.glsl
resources/shaders/old/: debug_light.frag  depth.frag  forward_shading.vert
src/: main.cpp
src/camera/: Camera.cpp  Camera.h
src/core/: EngineModule.cpp  EngineModule.h  WindowParameters.cpp  WindowParameters.h
src/ecs/: ECSModule.cpp  ECSModule.h
src/input/: InputModule.cpp  InputModule.h
src/lighting/: DirectionalLight.cpp  DirectionalLight.h  Light.h
src/materialLibrary/: MaterialLibraryModule.cpp  MaterialLibraryModule.h
src/mesh/: Mesh.cpp  Mesh.h  Quad.cpp  Sphere.cpp
src/module/: ModuleInterface.h  ModuleManager.cpp
src/profiling/: RemoteryModule.h
src/rendering/: CommandBuffer.cpp  CommandBuffer.h  GLCache.cpp  GLCache.h  Material.cpp  Material.h  RenderCommand.h  RenderTarget.cpp  RenderingModule.cpp  RenderingModule.h  Shader.cpp  Shader.h  ShadingTypes.h  Texture.cpp  TextureCube.cpp
src/resources/: ModelLoader.cpp  ModelLoader.h  Resources.cpp  Resources.h  ShaderLoader.cpp  TextureLoader.h
src/scene/: SceneNode.h  Skybox.cpp  Skybox.h
src/threading/: Semaphore.h  SpscQueue.h
